# TP01_POO

./: Aluno.cpp  Aluno.h  Auxiliar.cpp  Auxiliar.h  CMakeLists.txt  Cadastro.cpp  Cadastro.h  Pessoa.cpp  Pessoa.h  Professor.cpp  Professor.h  main.cpp
